@@ -1037,6 +1037,11 @@
     * Add Add .mp3 and .ogg Upload handling:
       - Update www/vicidial/audio_store.php,
           www/vicidial/non_agent_api.php
+    * Add list_id, owner into SEARCHRESULTSview:
+      - Update www/agc/vdc_db_query.php.
+    * Show only recordings of allowed users:
+      - New www/vicidial/admin_functions.php.
+      - Update www/vicidial/admin_modify_lead.php.
   [Danny Funkat]
     * Add Pause code into AGENTSview:
       - Update www/agc/vdc_db_query.php.
